--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0 ">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu.css">
-
+    
     <title>Arc Labs</title>
 </head>
 
@@ -56,4 +55,14 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section id="banner">
+            <img src="img/header-bg.jpg" alt="presentacion">
+            <div class="contenedor">
+                <h3>BUILDING FOR SOCIETY</h3>
+                <h2>FUTURE ARCHITECHURE</h2>
+                <a href="#">View Project</a>
+            </div>
+        </section>
+    </main>
 </body>
