--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0 ">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0 ">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
     
@@ -60,7 +60,7 @@
             <img src="img/header-bg.jpg" alt="presentacion">
             <div class="contenedor">
                 <h3>BUILDING FOR SOCIETY</h3>
-                <h2>FUTURE ARCHITECHURE</h2>
+                <h2>FUTURE ARCHITECTURE</h2>
                 <a href="#">View Project</a>
             </div>
         </section>
