--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
     </header>
     <main>
         <section id="banner">
-            <img src="img/header-bg.jpg" alt="presentacion">
+            <picture>
+                <source srcset="img/fondo.jpg" media="(max-width:600px">
+                <img src="img/header-bg.jpg" alt="presentacion">
+            </picture>
+            
             <div class="contenedor">
                 <h3>BUILDING FOR SOCIETY</h3>
                 <h2>FUTURE ARCHITECTURE</h2>
