--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </header>
     <main>
-        <section id="banner">
+        <section class="banner">
             <picture>
                 <source srcset="img/fondo.jpg" media="(max-width:600px">
                 <img src="img/header-bg.jpg" alt="presentacion">
@@ -67,6 +67,13 @@
                 <h2>FUTURE ARCHITECTURE</h2>
                 <a href="#">View Project</a>
             </div>
-        </section>
+          
+            <div class="redes-ban">
+                <a href="#" class="button icon-facebook"></a>
+                <a href="#" class="button icon-twitter"></a>
+                <a href="#" class="button icon-instagram"></a>
+                
+            </div>
+        </section>  
     </main>
 </body>
