--- a/index.html
+++ b/index.html
@@ -68,12 +68,34 @@
                 <a href="#">View Project</a>
             </div>
           
-            <div class="redes-ban">
-                <a href="#" class="button icon-facebook"></a>
-                <a href="#" class="button icon-twitter"></a>
-                <a href="#" class="button icon-instagram"></a>
-                
-            </div>
+                <div class="redes-ban">
+                    <a href="#" class="button icon-facebook"></a>
+                    <a href="#" class="button icon-twitter"></a>
+                    <a href="#" class="button icon-instagram"></a>
+                </div>
         </section>  
+        <section class="blog">
+            <article>
+                <img src="img/c1.jpg" alt="Creative Design">
+                <h4>Creative Design</h4>
+                <h5>Hac facilisi ac vitae consec tetu commodo vel magna suspendisse on senectus pharetra magnfauc</h5>
+            </article>
+            <article>
+                <img src="img/c2.jpg" alt="Experienced Style">
+                <h4>Experienced Style</h4>
+                <h5>Hac facilisi ac vitae consec tetu commodo vel magna suspendisse on senectus pharetra magnfauc</h5>
+            </article>
+            <article>
+                <img src="img/c3.jpg" alt="Product Research">
+                <h4>Product Research</h4>
+                <h5>Hac facilisi ac vitae consec tetu commodo vel magna suspendisse on senectus pharetra magnfauc</h5>
+            </article>
+            <article>
+                <img src="img/c4.jpg" alt="Affordable Price">
+                <h4>Affordable Price</h4>
+                <h5>Hac facilisi ac vitae consec tetu commodo vel magna suspendisse on senectus pharetra magnfauc</h5>
+            </article>
+
+        </section>
     </main>
 </body>
