--- a/index.html
+++ b/index.html
@@ -98,5 +98,15 @@
                 </article>
             </div>
         </section>
+
+        <section class="about">
+            <div class="about-us">
+                <img src="img/about.png" alt="about us">
+                <h3>About s</h3>
+                <h2>We are worl number one Company</h2>
+                <h4>Face male he light it moveth darkness winged eveni seas after life every gathering is foth two kind lesser i from seas him open him from creepeth after, life is above image from replenish behold great</h4>
+                <a href="#">Read More</a>
+            </div>
+        </section>
     </main>
 </body>
