--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="img/header-bg.jpg" alt="presentacion">
             </picture>
             
-            <div class="contenedor">
+            <div class="content">
                 <h3>BUILDING FOR SOCIETY</h3>
                 <h2>FUTURE ARCHITECTURE</h2>
                 <a href="#">View Project</a>
