--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <picture>
                 <source srcset="img/fondo.jpg" media="(max-width:600px">
                 <img src="img/header-bg.jpg" alt="presentacion">
+                    <div class="fondo">
+                        <img src="img/fondo.jpg" alt="fondo">
+                    </div>
             </picture>
             
             <div class="content">
