--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <main>
             <section class="banner">
                 <div class="arclabs">
-                    
+                    <img src="img/logo.png" alt="arclabs">
                 </div>
                 <div class="content">
                     <h3>BUILDING FOR SOCIETY</h3>
@@ -105,6 +105,8 @@
         <section class="about">
             <div class="about-us">
                 <img src="img/about.png" alt="about us">
+            </div>
+            <div class="descrip">
                 <h3>About Us</h3>
                 <h2>We are world </br>number one Company</h2>
                 <h4>Face male he light it moveth darkness winged eveni seas after life every gathering is foth two kind lesser i from seas him open him from creepeth after, life is above image from replenish behold great</h4>
