--- a/index.html
+++ b/index.html
@@ -320,14 +320,26 @@
             </li>
             <div class="tec">
                 <li>
-                    <label for="action"><input type="email" id="email" placeholder="Your Email Address" />
-                    </label>
+                    <input type="email" id="email" placeholder="Your Email Address" />
                     <button>Suscribe</button>
                 </li>
                 
             </div>
         </ul>
     </div>
-
+    <div class="footer">
+        <div class="contenedor">
+            <div class="copy">
+                <p>Copiright <span>&#169;</span>2021 All rights reserved | This template is made with <span class="icon-heart-empty"></span> by <a>Colorlib</a></p>
+            </div>
+            
+            <div class="redes">
+                <a href="#"><span class="button icon-facebook"></span></a>
+                <a href="#" ><span class="button icon-twitter"></span></a>
+                <a href="#" ><span class="button icon-globe"></span></a>
+                <a href="#" ><span class="button icon-linkedin"></span></a>
+            </div>
+        </div>
+    </div>
 
 </footer>
