--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             
                             <article>
                                 <div class="client1">
-                                    <img src="/img/t1.png" alt="client1">
+                                    <img src="img/t1.png" alt="client1">
                                     <div class="div1">
                                         <h4>Give dry stars form. Us called an won't winged had land cru abundantly land Midst</h4>
                                         <h3>DANYEL YARDE</h3>
@@ -209,7 +209,7 @@
                             </article>
                             <article>
                                 <div class="client2">
-                                    <img src="/img/t2.png" alt="client2">
+                                    <img src="img/t2.png" alt="client2">
                                     <div class="div1">
                                         <h4>Give dry stars form. Us called an won't winged had land cru abundantly land Midst</h4>
                                         <h3>MANEL DJUICE</h3>
@@ -219,7 +219,7 @@
                             </article>
                             <article>
                                 <div class="client3">
-                                    <img src="/img/t3.png" alt="client3">
+                                    <img src="img/t3.png" alt="client3">
                                     <div class="div1">
                                         <h4>Give dry stars form. Us called an won't winged had land cru abundantly land Midst</h4>
                                             <h3>MARK ALVIRO WIENS</h3>
@@ -233,11 +233,11 @@
                 </section>
                 <section id="logos">
                     <div class="contenedor">
-                    <img class="log" src="/img/b1.png" alt="premium">
-                    <img class="log" src="/img/b2.png" alt="premium">
-                    <img class="log" src="/img/b3.png" alt="premium">
-                    <img  src="/img/b4.png" alt="premium">
-                    <img class="log" src="/img/b5.png" alt="premium">
+                    <img class="log" src="img/b1.png" alt="premium">
+                    <img class="log" src="img/b2.png" alt="premium">
+                    <img class="log" src="img/b3.png" alt="premium">
+                    <img  src="img/b4.png" alt="premium">
+                    <img class="log" src="img/b5.png" alt="premium">
                     </div>
                 </section>
 </body>
