--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </header>
         <main>        
             <section id="banner">
-                        <!--<img src="img/header-bg.jpg" alt="banner">-->
-                        <div class="contenedor">
+                <img src="img/header-bg.jpg" alt="banner">
+                <div class="contenedor">
                             <div class="arclabs">
                                 <img src="img/logo.png" alt="arclabs">
                             </div>
@@ -186,6 +186,7 @@
                 
                 <div class="Proyect">
                     <p>View Our Project</p>
+                    <img src="img/ct1.jpg" alt="">
                 </div>
                 <section id="test">
                     <div class="descrip">
